--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,8 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi possimus incidunt cumque quidem tenetur expedita dicta quisquam accusantium eos consectetur? Ducimus similique numquam aspernatur sapiente iure deserunt beatae voluptate. Commodi!</p>
+    <hr>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus deleniti natus voluptatem libero aliquam vel optio quaerat commodi porro molestias at sequi aperiam, assumenda quia facere explicabo reprehenderit labore ad.</p>
     
 </body>
 </html>
